fixed text wrapping probem for navigation on tablet size

--- a/Website/frontend/assets/css/_sass/partials/_header.scss
+++ b/Website/frontend/assets/css/_sass/partials/_header.scss
@@ -39,6 +39,7 @@
 			width: 100%;
 			font-size: 0; /* This is to fix the spacing between inline-block elements. Font size is reset on child element */
 			text-transform: uppercase;
+			white-space: nowrap;
 			li {
 				font-size: 15px;
 				a {
